--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   margin: 10px;
 }
 
+.app-logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 /* Landing page */
 
 .container {
