--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+  background-color: #f3f3f3;
+  padding: 1rem;
+  border-radius: 5px;
+  margin-bottom: 1rem;
 }
 
 /* Landing page */
@@ -96,4 +100,20 @@ li {
   align-items: center;
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.heatmap-wrapper {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  height: 100%;
+  min-height: 900px !important;
+}
+
+.heatmap-wrapper > * {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
