--- a/src/App.css
+++ b/src/App.css
@@ -92,16 +92,6 @@ li {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-/* pagination  */
-
-.pagination-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .heatmap-wrapper {
   position: relative;
   width: 100%;
@@ -116,4 +106,20 @@ li {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+/* pagination  */
+
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+/* filters */
+
+.select-filter {
+  width: 100%;
 }
