active filter bage has been added

--- a/src/App.css
+++ b/src/App.css
@@ -136,6 +136,11 @@ li {
   width: 100%;
 }
 
+.active-filter-label {
+  color: #ffffff;
+  background-color: #f0893ade;
+}
+
 /* tooltips */
 
 .tooltip-row {
